# QuasiGrad

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/agon/: estimator.h  optimizer.h  optimizers.h  optimizers.hpp  parameter.h  parameter.hpp
include/agon/core/: parameter.h
include/agon/detail/: arch.hpp  dedup.hpp  utils.hpp
include/agon/detail/simd/: arch.h  ops.h  types.h  utils.h
include/agon/detail/simd/ops/: add.h  cast.h  cast_trunc.h  div.h  fmadd.h  fmsub.h  fnmadd.h  fnmsub.h  load.h  max.h  min.h  mul.h  neg.h  round.h  set1.h  setzero.h  sign.h  sqrt.h  store.h  sub.h
include/agon/estimators/: rge.h
include/agon/internal/simd/: ops.h
include/agon/internal/simd/ops/: add.h  div.h  load.h  max.h  min.h  mul.h  mulhi.h  mullo.h  set1.h  sqrt.h  store.h  sub.h
include/agon/optimizers/: optimizer.h  optimizer.hpp  sgd.h
include/agon/optimizers/impls/: adam.h  adam.hpp  adamm.h  lion.h  lion.hpp  sarah.h  sarah.hpp  sgd.h  sgd.hpp  spider.h  svrg.h  svrg.hpp
include/mirage/: optimizer.hpp  optimizers.hpp  parameter.hpp
include/mirage/detail/: arch.hpp  dedup.hpp  matrix.hpp  unpack.hpp  utils.hpp
include/mirage/optimizer/: optimizer.hpp
include/mirage/optimizer/impls/: adam.hpp  lion.hpp  muon.hpp  sarah.hpp  sgd.hpp  soap.hpp  splus.hpp  svrg.hpp
include/mirage/optimizers/: optimizer.hpp
include/mirage/optimizers/impls/: adam.hpp  lion.hpp  sarah.hpp  sgd.hpp  splus.hpp  svrg.hpp
src/: estimator.cpp  optimizer.cpp  parameter.cpp
src/core/: parameter.cpp
src/estimators/: rge.cpp
src/optimizers/: optimizer.cpp  sgd.cpp
src/optimizers/impls/: adam.cpp  adamm.cpp  sgd.cpp  spider.cpp
